Add java.security.manager to secmgr profile